2015-04-01  H.J. Lu  <hjl.tools@gmail.com>

	* Makefile.am (TESTS): Add run-strip-test9.sh.
	(EXTRA_DIST): Likewise. Add testfile-x32-s.bz2.
	* run-strip-test9.sh: New file.
	* testfile-x32-s.bz2: Likewise.

2015-04-01  H.J. Lu  <hjl.tools@gmail.com>

	* Makefile.am (TESTS): Add run-backtrace-core-x32.sh.
	(EXTRA_DIST): Likewise. Add backtrace.x32.core.bz2.
	Add backtrace.x32.exec.bz2.
	* backtrace.x32.core.bz2 : New file.
	* backtrace.x32.exec.bz2: Likewise.
	* run-backtrace-core-x32.sh: Likewise.

2015-04-01  H.J. Lu  <hjl.tools@gmail.com>

	* run-addrcfi.sh: Add a test for testfile-x32.
	* testfile-x32.bz2: New file.
	* Makefile.am (EXTRA_DIST): Add testfile-x32.bz2.

2015-04-01  H.J. Lu  <hjl.tools@gmail.com>

	* run-allregs.sh: Add a test for testfile-x32-core.

2015-04-01  H.J. Lu  <hjl.tools@gmail.com>

	* run-readelf-mixed-corenote.sh: Add a test for testfile-x32-core.
	* testfile-x32-core.bz2: New file.
	* Makefile.am (EXTRA_DIST): Add testfile-x32-core.bz2.

2015-03-18  Petr Machata  <pmachata@redhat.com>

	* addrcfi.c (op_name): Adjust uses of know-dwarf.h macros to match
	the API changes.
	* allregs.c (dwarf_encoding_string): Likewise.
	* show-die-info.c (dwarf_tag_string, dwarf_attr_string): Likewise.
	* varlocs.c (dwarf_encoding_string, dwarf_opcode_string): Likewise.

2015-03-18  Petr Machata  <pmachata@redhat.com>

	* Makefile.am (EXTRA_DIST): Add run-dwarf-ranges.sh,
	debug-ranges-no-lowpc.o.bz2.

2015-03-13  Mark Wielaard  <mjw@redhat.com>

	* backtrace-dwarf.c: Add explicit includes.
	(cleanup_13_abort): Remove unused static declaration.
	(thread_callback): Add explicit return.

2015-03-13  H.J. Lu  <hjl.tools@gmail.com>

	* backtrace.c (prepare_thread): Use PTRACE_GETREGS/PTRACE_SETREGS
	instead of PTRACE_POKEUSER.
	(exec_dump): Check EM_X86_64 instead of ELFCLASS64 for
	is_x86_64_native.

2015-02-18  Mark Wielaard  <mjw@redhat.com>

	* newdata.c (check_section_data): Use PRId64 for printing loff_t.

2015-02-11  Josh Stone  <jistone@redhat.com>
