@@ -1,5 +1,14 @@
 2015-04-01  H.J. Lu  <hjl.tools@gmail.com>
 
+	* Makefile.am (TESTS): Add run-strip-test10.sh.
+	(EXTRA_DIST): Likewise. Add testfile-x32-d.bz2.
+	Add testfile-x32-debug.bz2.
+	* run-strip-test10.sh: New file.
+	* testfile-x32-d.bz2: Likewise.
+	* testfile-x32-debug.bz2: Likewise.
+
+2015-04-01  H.J. Lu  <hjl.tools@gmail.com>
+
 	* Makefile.am (TESTS): Add run-strip-test9.sh.
 	(EXTRA_DIST): Likewise. Add testfile-x32-s.bz2.
 	* run-strip-test9.sh: New file.
